--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     <section id="step12">
       <h2>Step 1 and 2</h2>
+      <button type="button" id="ajaxbutton">Run Ajax</button>
     </section>
 
     <section id="step3456">
       <h2>Step 3, 4, 5, 6</h2>
+      <button type="button" id='ping'>Run AJAX Request to Ping/Pong</button>
     </section>
 
     <section id="step7">
@@ -28,7 +30,6 @@
       <h2>Step 9</h2>
     </section>
 
-    <button type="button" id="ajaxbutton">Run Ajax</button>
 
   </body>
 </html>
