Add fail case to ping, remade fail case into its own button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <section id="step3456">
       <h2>Step 3, 4, 5, 6</h2>
-      <button type="button" id='ping'>Run AJAX Request to Ping/Pong</button>
+      <button type="button" id='ping'>Run AJAX Request to Ping</button>
+      <button type="button" id='pong'>Run failed AJAX Request to Pong</button>
+
     </section>
 
     <section id="step7">
