Add ajax count request + button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <section id="step7">
       <h2>Step 7</h2>
     </section>
+    <button type="button" id='count'>Run AJAX Request to Count</button>
 
     <section id="step8">
       <h2>Step 8</h2>
