--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 
     <section id="step9">
       <h2>Step 9</h2>
+      <button type="button" id="carbutton">Run AJAX Request to A Car</button>
+      <ul id="carlist">
+
+      </ul>
     </section>
 
 
